syntax = "proto3";
package deep_project;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
// import "google/protobuf/enum.proto";

service Test {
	rpc RunTest(AssignmentMsg) returns (AssignmentResult);
}

message AssignmentResult {
	bool passed = 1;
	google.protobuf.StringValue message = 2;
	bool valid = 3;
}

enum Script {
	PowerShell = 0;
	Batch = 1;
	Python3 = 2;
	Shell = 3;
	Bash = 4;
	Awk = 5;
	Sed = 6;
}

enum RegexMode {
	UnknownRegex = 0;
	Stdout = 1;
	ScriptContent = 2;
}

enum SortStdoutBy {
	UnknownSort = 0;
	Asc = 1;
	Desc = 2;
}

message Assignment {
    string name = 1;
    string solution = 2;
	bytes include_files = 3;
	Script script_type = 4;
    repeated string args = 5;
	bool compare_fs_solution = 6;
	bool compare_stdout_solution = 7;
	google.protobuf.StringValue custom_script = 8;
	RegexMode regex_mode = 9;
	SortStdoutBy sort_stdout = 10;
	google.protobuf.StringValue regex = 11;
}

message AssignmentMsg {
	Assignment assignment = 1;
	string code_to_test = 2;
}
