syntax = "proto3";
package deep_project;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
// import "google/protobuf/enum.proto";

service Test {
  rpc RunTest(AssignmentMsg) returns (AssignmentResult) {}
  rpc GetAssignments(google.protobuf.Empty) returns (VecAssignmentsShort) {}
  rpc AssignmentExists(AssignmentIdRequest) returns (AssignmentIdResponse) {}
}
message AssignmentIdRequest{ uint64 assignment_id = 1; }
message AssignmentIdResponse { bool found = 1; }

message VecAssignmentsShort { repeated AssignmentShort assignments = 1; }

message AssignmentShort {
  string name = 1;
  uint64 assignment_id = 2;
}

message AssignmentResult {
  bool passed = 1;
  google.protobuf.StringValue message = 2;
  google.protobuf.StringValue mark = 3; // type mark
}

message Mark {

}

enum Script {
  Unknown = 0;
  PowerShell = 1;
  Batch = 2;
  Python3 = 3;
  Shell = 4;
  Bash = 5;
  Awk = 6;
  Sed = 7;
}

message AssignmentMsg {
  string src_code = 1;
  uint64 assignment_id = 2;
}

// The response message containing the greetings
message HelloReply { string message = 1; }